--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Coloress - Blazor App</title>
+    <title>Acromo - Teambuilding Helper</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="Coloress.styles.css" rel="stylesheet" />
+    <link href="Acromo.styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="app">
         <div class="loading-screen">
             <div class="loading-spinner"></div>
-            <p>Loading Coloress...</p>
+            <p>Loading Acromo...</p>
         </div>
     </div>
 
